# skibidi-http

./: Cargo.toml  notes.txt
src/: into_response.rs  lib.rs  main.rs
src/client/: client.rs  parse.rs
src/server/: extractors.rs  handle_connection.rs  mod.rs  router.rs  server.rs
